@@ -32,6 +32,8 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
   * apt-pkg/deb/dpkgpm.cc:
     - fix crash when a package is in removed but residual config state
       (LP: #923807)
+  * apt-pkg/contrib/fileutl.h:
+    - fix compat with FileFd::OpenDescriptor() in ReadOnlyGzip mode
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 30 Jan 2012 19:17:09 +0100
 
